--- a/tamplates/signUp.html
+++ b/tamplates/signUp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>System Lux | Login</title>
+  <title>System Lux | Sign up</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" href="../assets/images/logo/favicon.png" type="image/x-icon">
 
