--- a/tamplates/index.html
+++ b/tamplates/index.html
@@ -3,22 +3,28 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Landrick - Saas & Software Landing Page Template</title>
+    <title>System Lux | Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="../assets/images/logo/favicon.png">
     <!-- Bootstrap -->
     <link href="../vendor/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+
     <!-- Icons -->
     <link href="../vendor/css/materialdesignicons.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css">
+
     <!-- Slider -->
     <link rel="stylesheet" href="../vendor/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="../vendor/css/owl.theme.default.min.css" />
+
     <!-- Main Css -->
     <link href="../vendor/css/style.css" rel="stylesheet" type="text/css" id="theme-opt" />
     <link href="../vendor/css/colors/default.css" rel="stylesheet" id="color-opt">
+
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="../custom css/style.css">
 
 </head>
 
@@ -35,16 +41,16 @@
     <!-- Loader -->
 
     <!-- Navbar STart -->
-    <header id="topnav" class="defaultscroll sticky">
+    <header id="topnav" class="defaultscroll sticky border-bottom">
         <div class="container">
             <!-- Logo container-->
             <div>
                 <a class="logo" href="index.html">
-                    <img src="images/logo-dark.png" height="24" alt="">
+                    <img src="../assets/images/logo/logo.png" height="50" alt="">
                 </a>
             </div>
             <div class="buy-button">
-                <a href="https://1.envato.market/4n73n" target="_blank" class="btn btn-primary">Buy Now</a>
+                <a href="#" target="_blank" class="btn btn-primary" id="buttonStyle">login</a>
             </div>
             <!--end login button-->
             <!-- End Logo container-->
@@ -68,14 +74,15 @@
                     <li><a href="index.html">Home</a></li>
 
                     <li class="has-submenu">
-                        <a href="javascript:void(0)">Pages</a>
+                        <a href="javascript:void(0)">About Us</a>
                     </li>
                     <li class="has-submenu">
-                        <a href="javascript:void(0)">Docs</a><span class="menu-arrow"></span>
+                        <a href="javascript:void(0)">Contact Us</a></span>
                     </li>
                 </ul>
                 <div class="buy-menu-btn d-none">
-                    <a href="https://1.envato.market/4n73n" target="_blank" class="btn btn-primary">Buy Now</a>
+                    <a href="https://1.envato.market/4n73n" target="_blank" class="btn btn-primary"
+                        id="buttonStyle">Login</a>
                 </div>
             </div>
         </div>
@@ -83,26 +90,32 @@
     <!-- Navbar End -->
 
     <!-- Hero Start -->
-    <!-- <section class="bg-half-170  d-table w-100" id="home">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-7 col-md-7">
-                        <div class="title-heading mt-4">
-                            <h1 class="heading mb-3">Our Creativity Is Your <span class="text-primary">Success</span> </h1>
-                            <p class="para-desc text-muted">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap4 html page.</p>
-                            <div class="mt-4">
-                                <a href="page-contact-one.html" class="btn btn-primary mt-2 mr-2"><i class="mdi mdi-email"></i> Get Started</a>
-                                <a href="documentation.html" class="btn btn-outline-primary mt-2"><i class="mdi mdi-book-outline"></i> Documentation</a>
-                            </div>
+    <section class="bg-half-170  d-table w-100" id="home">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-7 col-md-7">
+                    <div class="title-heading mt-4">
+                        <h2 class=" mb-3">WELCOME TO KOFORIDUA TECHNICAL <span class="element text-primary"
+                                data-elements="UNIVERSITY, UNIVERSITY, UNIVERSITY, UNIVERSITY, UNIVERSITY"></span>
+                        </h2>
+                        <p class="para-desc text-muted">Launch your campaign and benefit from our expertise on designing
+                            and managing conversion centered bootstrap4 html page. Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Pellentesque in non ut mollis.</p>
+                        <div class="mt-4">
+                            <a href="page-contact-one.html" class="btn btn-primary mt-2 mr-2" id="buttonStyle">Read More
+                                <i class="mdi mdi-arrow-right-bold-circle-outline"></i></a>
+                            <a href="documentation.html" class="btn btn-primary mt-2" id="buttonStyle"><i
+                                    class="mdi mdi-book-outline"></i> Register</a>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-lg-5 col-md-5 mt-4 pt-2 mt-sm-0 pt-sm-0">
-                        <img src="images/illustrator/Startup_SVG.svg" alt="">
-                    </div>
+                <div class="col-lg-5 col-md-5 mt-4 pt-2 mt-sm-0 pt-sm-0">
+                    <img src="../assets/images/home/Welcome_SVG.svg" class="img-fluid" alt="">
                 </div>
             </div>
-        </section> -->
+        </div>
+    </section>
     <!-- Hero End -->
 
     <!-- Partners start -->
@@ -137,27 +150,22 @@
         </section> -->
     <!-- Partners End -->
 
-    <!-- <footer class="footer footer-bar">
-            <div class="container text-center">
-                <div class="row align-items-center">
-                    <div class="col-sm-6">
-                        <div class="text-sm-left">
-                            <p class="mb-0">© 2019-20 Landrick. Design with <i class="mdi mdi-heart text-danger"></i> by <a href="http://www.shreethemes.in/" target="_blank" class="text-reset">Shreethemes</a>.</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
-                        <ul class="list-unstyled text-sm-right mb-0">
-                            <li class="list-inline-item"><a href="javascript:void(0)"><img src="images/payments/american-ex.png" class="avatar avatar-ex-sm" title="American Express" alt=""></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)"><img src="images/payments/discover.png" class="avatar avatar-ex-sm" title="Discover" alt=""></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)"><img src="images/payments/master-card.png" class="avatar avatar-ex-sm" title="Master Card" alt=""></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)"><img src="images/payments/paypal.png" class="avatar avatar-ex-sm" title="Paypal" alt=""></a></li>
-                            <li class="list-inline-item"><a href="javascript:void(0)"><img src="images/payments/visa.png" class="avatar avatar-ex-sm" title="Visa" alt=""></a></li>
-                        </ul>
+    <!-- Footer Start -->
+    <footer class="footer footer-bar">
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col-sm-6">
+                    <div class="text-sm-left">
+                        <p class="mb-0">© Copyright 2022: <b>System Lux</b></p>
                     </div>
                 </div>
+
+                <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
+                    <p class="mb-0">Designed By: Dede & Priscilla</p>
+                </div>
             </div>
-        </footer> -->
+        </div>
+    </footer>
     <!-- Footer End -->
 
     <!-- Back to top -->
@@ -169,6 +177,13 @@
     <script src="../vendor/js/bootstrap.bundle.min.js"></script>
     <script src="../vendor/js/jquery.easing.min.js"></script>
     <script src="../vendor/js/scrollspy.min.js"></script>
+    <!-- Typed -->
+    <script src="../vendor/js/typed.js"></script>
+    <script src="../vendor/js/typed.init.js"></script>
+    <!-- Counter -->
+    <script src="../vendor/js/counter.init.js"></script>
+    <!-- Parallax -->
+    <script src="../vendor/js/parallax.js "></script>
     <!-- SLIDER -->
     <script src="../vendor/js/owl.carousel.min.js "></script>
     <script src="../vendor/js/owl.init.js "></script>
